--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="body_content_item" key="{v.title}">
           <div class="left">发证日期</div>
           <div class="right">2021年06月28日</div>
-        </div>d
+        </div>
         <div class="body_content_item" key="{v.title}">
           <div class="left">有效日期</div>
           <div class="right">2021年06月28日至2023年06月27日</div>
